edit the display of breadcrum

--- a/public/assets/css/sleek.css
+++ b/public/assets/css/sleek.css
@@ -7113,6 +7113,8 @@ label {
 
 /*===== BREDCRUMB =====*/
 .breadcrumb-wrapper {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 30px; }
   .breadcrumb-wrapper h1 {
     color: #1b223c;
