--- a/public/assets/scss/_bredcrumb.scss
+++ b/public/assets/scss/_bredcrumb.scss
@@ -1,5 +1,7 @@
 /*===== BREDCRUMB =====*/
 .breadcrumb-wrapper {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 30px;
   h1 {
     color: $dark;
