--- a/public/assets/plugins/toastr/toastr.css
+++ b/public/assets/plugins/toastr/toastr.css
@@ -109,11 +109,11 @@ button.toast-close-button {
   -moz-border-radius: 3px 3px 3px 3px;
   -webkit-border-radius: 3px 3px 3px 3px;
   border-radius: 3px 3px 3px 3px;
-  background-position: 15px center;
-  background-repeat: no-repeat;
+  background-position: 15px center !important;
+  background-repeat: no-repeat !important;
   -moz-box-shadow: 0 0 12px #999999;
   -webkit-box-shadow: 0 0 12px #999999;
-  box-shadow: 0 0 12px #999999;
+  box-shadow: 0 0 12px #999999 !important;
   color: #FFFFFF;
   opacity: 0.8;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
